--- a/Thesis/LaTeX/Layout/Titelpagina.tex
+++ b/Thesis/LaTeX/Layout/Titelpagina.tex
@@ -31,7 +31,7 @@ the degree of}} \linebreak
 %!!!IMPORTANT!!!:
 %indicate the appropriate title of your master and major. Check the website https://feb.kuleuven.be/studentenportaal/contact/masterproef-leuven
 {\large Informatiemanagement}\linebreak
-{\large Major Data science en business analytics}\linebreak
+{\large ???}\linebreak
 \linebreak
 \textbf{{\large Promoter:}}   Prof.\ Dr.\ Jan Vanthienen \linebreak
 \textbf{{\large Co-promoter:}} Prof.\ Dr.\ ... \linebreak
