QoL changes: more structure to the repo

--- a/Thesis/LaTeX/bibliografie.bib
+++ b/Thesis/LaTeX/bibliografie.bib
@@ -1,5 +1,6 @@
+% Encoding: UTF-8
+
+@Comment{jabref-meta: databaseType:bibtex;}
+
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
-
-
-
