--- a/Thesis/LaTeX/Layout/Titelpagina.tex
+++ b/Thesis/LaTeX/Layout/Titelpagina.tex
@@ -23,14 +23,14 @@
 \begin{flushright}
 
 {\Large Rob De Putter, Mout Pessemier, Laurens Van Keymolen} \linebreak
-{r08, r0837708, r} \linebreak
+{r0836627, r0837708, r0662749} \linebreak
 
 \textbf{{\large Thesis submitted to obtain \linebreak
-the degree of}} \linebreak
+the degree of  master in the Information Management}} \linebreak
 
 %!!!IMPORTANT!!!:
 %indicate the appropriate title of your master and major. Check the website https://feb.kuleuven.be/studentenportaal/contact/masterproef-leuven
-{\large Informatiemanagement}\linebreak
+{\large Information Management}\linebreak
 {\large ???}\linebreak
 \linebreak
 \textbf{{\large Promoter:}}   Prof.\ Dr.\ Jan Vanthienen \linebreak
