add my part to literature study

--- a/Thesis/LaTeX/bibliografie.bib
+++ b/Thesis/LaTeX/bibliografie.bib
@@ -4,3 +4,101 @@
 
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
+
+@article{Adamopoulou2020,
+	abstract = {This literature review presents the History, Technology, and Applications of Natural Dialog Systems or simply chatbots. It aims to organize critical information that is a necessary background for further research activity in the field of chatbots. More specifically, while giving the historical evolution, from the generative idea to the present day, we point out possible weaknesses of each stage. After we present a complete categorization system, we analyze the two essential implementation technologies, namely, the pattern matching approach and machine learning. Moreover, we compose a general architectural design that gathers critical details, and we highlight crucial issues to take into account before system design. Furthermore, we present chatbots applications and industrial use cases while we point out the risks of using chatbots and suggest ways to mitigate them. Finally, we conclude by stating our view regarding the direction of technology so that chatbots will become really smart.},
+	author = {Eleni Adamopoulou and Lefteris Moussiades},
+	doi = {10.1016/j.mlwa.2020.100006},
+	issn = {26668270},
+	journal = {Machine Learning with Applications},
+	month = {12},
+	pages = {100006},
+	publisher = {Elsevier BV},
+	title = {Chatbots: History, technology, and applications},
+	volume = {2},
+	year = {2020},
+}
+
+@article{Bansal2018,
+	abstract = {The advancement in the development of computer technology has led to the idea of human computer interaction. Research experiments in human computer interaction involves the young age group of people that are educated and technically knowledgeable. This paper focuses on the mental model in Human Computer Interaction. There are various approaches of this review paper and one of them is highlighting current approach, results and the trends in the human computer interaction and the second approach is to find out the research that have been invented a long time before and are currently lagging behind. This paper also focuses on the emotional intelligence of a user to become more user like, fidelity prototyping. The development and design of an automated system that perform such task is still being accomplished.},
+	author = {Himanshu Bansal and Rizwan Khan},
+	doi = {10.23956/ijarcsse.v8i4.630},
+	issn = {22776451},
+	issue = {4},
+	journal = {International Journal of Advanced Research in Computer Science and Software Engineering},
+	month = {4},
+	pages = {53},
+	publisher = {Advance Academic Publisher},
+	title = {A Review Paper on Human Computer Interaction},
+	volume = {8},
+	year = {2018},
+}
+
+@report{Radziwil2021,
+	abstract = {Chatbots are one class of intelligent, conversational software agents activated by natural language input (which can be in the form of text, voice, or both). They provide conversational output in response, and if commanded, can sometimes also execute tasks. Although chatbot technologies have existed since the 1960's and have influenced user interface development in games since the early 1980's, chatbots are now easier to train and implement. This is due to plentiful open source code, widely available development platforms, and implementation options via Software as a Service (SaaS). In addition to enhancing customer experiences and supporting learning, chatbots can also be used to engineer social harm-that is, to spread rumors and misinformation, or attack people for posting their thoughts and opinions online. This paper presents a literature review of quality issues and attributes as they relate to the contemporary issue of chatbot development and implementation. Finally, quality assessment approaches are reviewed, and a quality assessment method based on these attributes and the Analytic Hierarchy Process (AHP) is proposed and examined.},
+	author = {Nicole Radziwill and Morgan Benton},
+	keywords = {Analytic Hierarchy Process (AHP),artificial intelligence,chatbot,intelligent agents,quality attributes,usability},
+	title = {Evaluating Quality of Chatbots and Intelligent Conversational Agents},
+	url = {http://www.masswerk.at/elizabot/eliza.html},
+}
+
+@inproceedings{Maroengsit2019,
+	abstract = {Nowadays chatbots have been widely adopted in many industries to automatically answer users' questions and requests via chat interfaces. While it has become much easier to develop a chatbot system, the system itself is a complex system in nature. It is a challenge to evaluate and compare various chatbot systems in terms of effectiveness, efficiency, goal achievability, and the ability to satisfy users. This paper presents a survey, starting from literature review, chatbot architecture, evaluation methods/criteria, and comparison of evaluation methods. Focused on the three subprocesses in the chatbot architecture: text processing, semantic understanding, and response generation. Moreover, the survey is conducted with classification of chatbot evaluation methods and their analysis according to chatbot types and three main evaluation schemes; content evaluation, user satisfaction, and chat function.},
+	author = {Wari Maroengsit and Thanarath Piyakulpinyo and Korawat Phonyiam and Suporn Pongnumkul and Pimwadee Chaovalit and Thanaruk Theeramunkong},
+	doi = {10.1145/3323771.3323824},
+	isbn = {9781450366397},
+	issn = {21531633},
+	journal = {PervasiveHealth: Pervasive Computing Technologies for Healthcare},
+	keywords = {Chatbot Evaluation,Information Systems,Natural Language Processing,Natural Language Understanding},
+	pages = {111-119},
+	publisher = {ICST},
+	title = {A survey on evaluation methods for chatbots},
+	volume = {Part F148391},
+	year = {2019},
+}
+
+@inproceedings{Nuruzzaman2018,
+	abstract = {Nowadays it is the era of intelligent machine. With the advancement of artificial intelligent, machine learning and deep learning, machines have started to impersonate as human. Conversational software agents activated by natural language processing is known as chatbot, are an excellent example of such machine. This paper presents a survey on existing chatbots and techniques applied into it. It discusses the similarities, differences and limitations of the existing chatbots. We compared 11 most popular chatbot application systems along with functionalities and technical specifications. Research showed that nearly 75% of customers have experienced poor customer service and generation of meaningful, long and informative responses remains a challenging task. In the past, methods for developing chatbots have relied on hand-written rules and templates. With the rise of deep learning these models were quickly replaced by end-to-end neural networks. More specifically, Deep Neural Networks is a powerful generative-based model to solve the conversational response generation problems. This paper conducted an in-depth survey of recent literature, examining over 70 publications related to chatbots published in the last 5 years. Based on literature review, this study made a comparison from selected papers according to method adopted. This paper also presented why current chatbot models fails to take into account when generating responses and how this affects the quality conversation.},
+	author = {Mohammad Nuruzzaman and Omar Khadeer Hussain},
+	doi = {10.1109/ICEBE.2018.00019},
+	isbn = {9781538679920},
+	journal = {Proceedings - 2018 IEEE 15th International Conference on e-Business Engineering, ICEBE 2018},
+	keywords = {Chatbot,Deep learning,Dialogue system,Natural language processing,Neural network},
+	month = {12},
+	pages = {54-61},
+	publisher = {Institute of Electrical and Electronics Engineers Inc.},
+	title = {A Survey on Chatbot Implementation in Customer Service Industry through Deep Neural Networks},
+	year = {2018},
+}
+
+@report{Verkeyn2018,
+	author = {Juan Verkeyn and Hermès Meerschmans},
+	title = {TOWARDS A BETTER UNDERSTANDING OF SERVICE QUALITY ATTRIBUTES OF A CHATBOT },
+	url = {https://libstore.ugent.be/fulltxt/RUG01/002/784/375/RUG01-002784375_2019_0001_AC.pdf},
+	year = {2018},
+}
+
+
+@article{Muizzah2021,
+	abstract = {A chatbot is an application that is widely used in diverse industries nowadays. The application makes used of human natural language to interact with the user in order to carry out any designated task. It started with an experiment conducted by Alan Turing which was named as Turing Test in the 1950s that has contributed to the evolution of technology into personal intelligence assistance. Siri, Cortana, and other services are the product of the evolution that was created with the aim to induce user satisfaction while completing the desired task. Various features of Chatbot have been introduced to support the functionality and purpose of the application. Availability, functionality, ethics, personality, and appearance of the interfaces are among of the features favored by the end-user. Thus, this paper aims to records all features available and making a summary based on past researches conducted. The outcome will be reflected as a guideline to develop a new improved Chatbot.},
+	author = {Nurul Muizzah Johari and Puteri NE Nohuddin},
+	doi = {10.34218/IJEET.12.7.2021.012},
+	issn = {0976-6553},
+	issue = {7},
+	journal = {International Journal of Electrical Engineering and Technology (IJEET)},
+	keywords = {Artificial Intelligence,Chatbot,Natural Language,Quality Attributes},
+	pages = {109-119},
+	title = {Quality Attributes for a Good Chatbot: A Literature Review},
+	volume = {12},
+	year = {2021},
+}
+
+@report{ISO9126,
+	abstract = {ISO/IEC 9126 is currently one of the most widespread quality standards. In its actual form it embraces both quality models and metrics. Due to its generic nature, some of the concepts presented therein need to be refined before using the standard in a real project. In our paper, we aim at exploring which are the concepts that require being more elaborated before putting the standard to work. Specifically, with respect to the part 1 of the standard we focus on the hierarchical form of the quality entities (i.e., characteristics, subcharacteristics and attributes) that appear in quality models; we propose some criteria to distinguish among subcharacteristics and attributes; we distinguish among derived attributes and basic attributes; and we propose an extension for covering not only technical factors but also managerial and political ones. Concerning the other 3 parts of the standard (one of them currently pending of approval), we distinguish different categorization criteria of metrics (scale, type, objectivity, qualitative/quantitative) and we make explicit the rationale behind their definition with the Goal-Question-Metric approach. As a final contribution, we show the use of UML class diagrams for representing all the concepts of the standard and their relationships, and we highlight the need for having tool support for quality model development and metrics definition.},
+	author = {P Botella and X Burgués and J P Carvallo and X Franch and G Grau and J Marco and C Quer},
+	title = {ISO/IEC 9126 in practice: what do we need to know?},
+}
+
+
+
+
