--- a/Thesis/LaTeX/LiteratureStudy.tex
+++ b/Thesis/LaTeX/LiteratureStudy.tex
@@ -2,3 +2,125 @@
 \pagestyle{headings}
 
 \chapter{Literature Study}
+\label{ch:literature-study}
+
+\section{What is a chatbot?}
+A chatbot is a computer software program which combines \acrfull{nlp}, \acrfull{nlu} , \acrfull{nlg} (\cite{Adamopoulou2020}), \acrfull{ai} and \acrfull{ml} algorithms to simulate a human-like behaviour. It can respond to questions and hold a conversation. This type of technology is what is called \acrfull{hci} (\cite{Adamopoulou2020}).  \acrshort{hci} is most likely to become the most widely researched topic in the \acrshort{ai} community (\cite{Bansal2018}). Chatbots are used in a verity of sectors. Some examples are education, health and of course e-commerce.
+\break
+\break
+The definition given by the dictionary goes as follows: “A computer program designed to simulate conversation with human users, especially over the Internet” (Chatbot |Definition of chatbot in English by Lexico Dictionaries, 2019). [Add some more technical definitions]
+\break
+\break
+Multiple types chatbots exist, going from text based to voice based to a combination of both (\cite{Radziwil2021}). Below is a more detailed taxonomy about chatbots.
+
+\subsection{Taxonomy of a chatbot}
+There are many variants of chatbots such as digital assistants, artificial conversation entities, interactive agents and smart bots (\cite{Adamopoulou2020}). In this research, the focus will be on the interactive agents, since most e-commerce chatbots are interactive agents.
+\break
+\break
+These chatbots can be further divided into different categories. Depending on which aspect you want to categorise, many options are available. Some of them are listed below.
+
+\subsubsection{Architecture}
+This categorisation is based on the way the chatbots are constructed, their internal architecture. Rule based chatbots use already developed or newly handcrafted algorithms as a decision maker to identify both knowledge and response. This model is fixed and can’t handle new inputs. On the other hand, \acrshort{ai} based chatbots are chatbots that use \acrlong{ml} algorithms to generate a response based on the data provided. They keep on learning and improving based on the previous learning models. This way they are better equipped to handle new inputs (\cite{Maroengsit2019}).
+
+\subsubsection{Domain}
+The domain category is based on how broad the domain is in which they are used. Domain specific chatbots focus on specific industries. They have knowledge of the industry they are deployed in. On the other hand, general domain chatbots are created to support conversations in open topics. They don’t support a specific domain. Instead, they are versatile and may be applied to any discipline (\cite{Maroengsit2019}).
+
+\subsubsection{Platform}
+Chatbots can be divided up based on the platform on which they are active. Social media chatbots use platforms such as Facebook Messenger, Facebook WhatsApp or Telegram Messenger for their communication with the user. Web based chatbots are most common on websites of companies. There, they get their own chat box to serve clients that way. Standalone program chatbots are installed as a separate program on the device of the user (\cite{Maroengsit2019}).
+
+\subsubsection{Type}
+Goal-based chatbots have a set goal they want to get to. For example, a set goal could be to sell a specific product to the customer. Once the product is sold, the chatbot has successfully reached its goal and thus fulfilled its purpose. Knowledge-based chatbots are classified on the knowledge they possess. Service-based chatbots are divided on the services they provide to the customer. Response-generated based chatbots are classified based on what action it performs in response generation (\cite{Nuruzzaman2018}).
+
+\subsubsection{Task}
+This categorisation results in task- and non-task-oriented chatbots. The latter is more question oriented and the first one more conversational (\cite{Nuruzzaman2018}).
+
+\subsubsection{Some example e-commerce chatbots}
+\begin{enumerate}
+	\item Billie by Bol.com
+	\item Stylebot by Nike
+	\item WineBot by Lidl
+	\item Domino's AnyWare by Domino's Pizza
+	\item Zalando chatbot
+\end{enumerate}
+
+\section{Customers’ expectations of communication with a company}
+
+\section{User experiences with e-commerce chatbots}
+
+\section{What makes users trust a customer service chatbot?}
+
+\section{Key Attributes and components of a successful e-commerce chatbot}
+Previous research has pointed out which characteristics are the most important. These characteristics can be grouped into some key dimensions.
+
+\subsubsection{Functionality}
+The most important attributes are interpretation of requests, execution of the request, flexible interpretation, ability to maintain a discussion, activation and the number of services available (\cite{Muizzah2021}; \cite{Verkeyn2018}).
+
+\subsubsection{Trustworthiness}
+Trustworthiness handles about the chatbot containing dependable information, containing a wide range of knowledge, the possibility of rating the chatbot, robustness to unexpected input and transparency (\cite{Muizzah2021}; \cite{Verkeyn2018}).
+
+\subsubsection{Safety / Intrusion}
+This category is all about protection and the respect of privacy and making sure the user is safe from intrusion (\cite{Muizzah2021}; \cite{Verkeyn2018}).
+
+\subsubsection{Efficiency}
+The efficiency dimension specifies the ease of use, quick replies versus free text usage, availability, accessibility and the need for an account (\cite{Muizzah2021}; \cite{Verkeyn2018}). 
+
+\subsubsection{Graphical Appearance}
+Graphical Appearance is all about the design and feel of the user interface and the use of emojis and gifs in conversations (\cite{Muizzah2021}; \cite{Verkeyn2018}). 
+
+\subsubsection{Humanity}
+The humanity dimension shows how humanlike the chatbot is. The attributes are about how real the chatbot feels, if it creates and enjoyable interaction, if it can convey a personality and if it can read and respond to certain moods of the customer (\cite{Muizzah2021}; \cite{Verkeyn2018}). 
+
+\subsubsection{Empathy}
+Empathy is about personalised options and suggestions (\cite{Muizzah2021}; \cite{Verkeyn2018}). 
+
+\subsubsection{Responsiveness}
+Responsiveness specifies the productivity and how fast the chatbot responds (\cite{Muizzah2021}; \cite{Verkeyn2018}).
+\break
+\break
+By putting these attributes through \acrfull{ahp}, 7 main dimensions are found. \acrshort{ahp} is a structured approach for navigating complex decision-making processes that involve both qualitative and quantitative considerations (\cite{Radziwil2021}). Table 1 lists the plausible attributes that give the highest user satisfaction score (\cite{Muizzah2021}).
+
+\begin{longtable}{|l|l|}
+	\hline
+	\textbf{Dimension} &
+	\textbf{Attributes} \\ \hline
+	\endfirsthead
+	\endhead
+	\begin{tabular}[c]{@{}l@{}}Technical\\ Functionalities\end{tabular} &
+	\begin{tabular}[c]{@{}l@{}}- Sentiment analytics: Intelligent (Using \acrshort{ai}, \acrshort{nlp}, \acrshort{ml}, \\ Semantic technology\\ - User friendly\\ - Automated\\ - Simple interface\\ - Interactive (using video, audio) to cater needs from different groups\\ - Multi-lingual\\ - General ease of use\end{tabular} \\ \hline
+	Efficiency &
+	\begin{tabular}[c]{@{}l@{}}- Robust to manipulation of data input by user\\ - Provide proper escalation channels\\ - Quick to answer\\ - Can perform damage control easily\end{tabular} \\ \hline
+	Effectiveness &
+	\begin{tabular}[c]{@{}l@{}}- Interpret statements and instructions accurately\\ - Linguistic accuracy\\ - Execute desired tasks correctly\\ - Contains wide array of knowledge\\ - Able to perform simple problem solving\end{tabular} \\ \hline
+	Humanistic &
+	\begin{tabular}[c]{@{}l@{}}- Human-like personality\\ - Transparent and disclose the chatbot identity\\ - Able to respond correctly to user's questions\\ - Can maintain the pattern of conversation within theme\end{tabular} \\ \hline
+	Ethics &
+	\begin{tabular}[c]{@{}l@{}}- Trained with knowledge of culture and ethics of users\\ - Protect and respect user's privacy\\ - Sensitive to user's concern (i.e., security, social concerns)\\ - Constancy\end{tabular} \\ \hline
+	Technical Satisfaction &
+	\begin{tabular}[c]{@{}l@{}}- Able to convey greetings\\ - Entertaining, fun and users enjoy the conversation\\ - Able to respond to the user's mood\\ - Provide emotional information using tones and expressions\end{tabular} \\ \hline
+	Accessibility &
+	\begin{tabular}[c]{@{}l@{}}- Ability to detect the user's intent\\ - Meeting a vast range of needs (i.e., time of buffer,\\ text interface)\\ - Available 24/7\end{tabular} \\ \hline
+	\caption{Plausible quality attributes of Chatbot (\cite{Muizzah2021}).}
+	\label{tab:ChatbotAttributes}
+\end{longtable}
+
+These attributes can be brought under six quality assessment categories provided by the ISO 9126-1 quality model\footnote{https://www.iso.org/standard/22749.html }  as seen in \ref{tab:ChatbotAttributes}.  By doing so, the quality of any piece of software, including a chatbot, can be measured (\cite{Muizzah2021}).
+\break
+\break
+Depending on the goal you want to reach, the focus on the most important characteristics will shift (\cite{Radziwil2021}). Overall, accessibility and efficiency come out to be the most important dimensions of a chatbot (\cite{Radziwil2021}). Both (\cite{Muizzah2021}) and (\cite{Radziwil2021}) confirm these results.
+
+\begin{longtable}{|c|c|}
+	\hline
+	\multicolumn{1}{|l|}{\textbf{Characteristics}} & \multicolumn{1}{l|}{\textbf{Sub Characteristics}}                                                            \\ \hline
+	\endfirsthead
+	\endhead
+	Functionality   & \begin{tabular}[c]{@{}c@{}}Suitability\\ Accuracy\\ Interoperability\\ Security\\ Functional compliance\end{tabular}           \\ \hline
+	Reliability                                    & \begin{tabular}[c]{@{}c@{}}Maturity\\ Fault tolerance\\ Recoverability\\ Reliability compliance\end{tabular} \\ \hline
+	Usability       & \begin{tabular}[c]{@{}c@{}}Understandability\\ Learnability\\ Operability\\ Attractiveness\\ Usability compliance\end{tabular} \\ \hline
+	Efficiency                                     & \begin{tabular}[c]{@{}c@{}}Time behaviour\\ Resource utilisation\\ Efficiency compliance\end{tabular}        \\ \hline
+	Maintainability & \begin{tabular}[c]{@{}c@{}}Analysability\\ Changeability\\ Stability\\ Testability\\ Maintainability compliance\end{tabular}   \\ \hline
+	Portability     & \begin{tabular}[c]{@{}c@{}}Adaptability\\ Installability\\ Co-existance\\ Replaceability\\ Portability compliance\end{tabular} \\ \hline
+	\caption{the ISO/IEC 9126-1 internal/external quality model (\cite{ISO9126}).}
+	\label{tab:ISO9126}
+\end{longtable}
+
+\section{Issues and errors in the current generation of customer service chatbots}
