Added paper of Meerschman and Verkeyn to bibfile

--- a/Thesis/LaTeX/bibliografie.bib
+++ b/Thesis/LaTeX/bibliografie.bib
@@ -99,6 +99,14 @@
 	title = {ISO/IEC 9126 in practice: what do we need to know?},
 }
 
+@report{Meerschman2019,
+   author = {Hermès Meerschman and Juan Verkeyn},
+   title = {TOWARDS A BETTER UNDERSTANDING OF SERVICE QUALITY ATTRIBUTES OF A CHATBOT Hermès Meerschman},
+   url = {http://lib.ugent.be/catalog/rug01:002784375},
+   year = {2019},
+}
+
+
 
 
 
