File Fusion: - added part of methodology into bigger file

--- a/Thesis/LaTeX/bibliografie.bib
+++ b/Thesis/LaTeX/bibliografie.bib
@@ -1,10 +1,5 @@
 % Encoding: UTF-8
-
 @Comment{jabref-meta: databaseType:bibtex;}
-
-%% This BibTeX bibliography file was created using BibDesk.
-%% http://bibdesk.sourceforge.net/
-
 @article{Adamopoulou2020,
 	abstract = {This literature review presents the History, Technology, and Applications of Natural Dialog Systems or simply chatbots. It aims to organize critical information that is a necessary background for further research activity in the field of chatbots. More specifically, while giving the historical evolution, from the generative idea to the present day, we point out possible weaknesses of each stage. After we present a complete categorization system, we analyze the two essential implementation technologies, namely, the pattern matching approach and machine learning. Moreover, we compose a general architectural design that gathers critical details, and we highlight crucial issues to take into account before system design. Furthermore, we present chatbots applications and industrial use cases while we point out the risks of using chatbots and suggest ways to mitigate them. Finally, we conclude by stating our view regarding the direction of technology so that chatbots will become really smart.},
 	author = {Eleni Adamopoulou and Lefteris Moussiades},
@@ -18,7 +13,6 @@
 	volume = {2},
 	year = {2020},
 }
-
 @article{Bansal2018,
 	abstract = {The advancement in the development of computer technology has led to the idea of human computer interaction. Research experiments in human computer interaction involves the young age group of people that are educated and technically knowledgeable. This paper focuses on the mental model in Human Computer Interaction. There are various approaches of this review paper and one of them is highlighting current approach, results and the trends in the human computer interaction and the second approach is to find out the research that have been invented a long time before and are currently lagging behind. This paper also focuses on the emotional intelligence of a user to become more user like, fidelity prototyping. The development and design of an automated system that perform such task is still being accomplished.},
 	author = {Himanshu Bansal and Rizwan Khan},
@@ -33,7 +27,6 @@
 	volume = {8},
 	year = {2018},
 }
-
 @report{Radziwil2021,
 	abstract = {Chatbots are one class of intelligent, conversational software agents activated by natural language input (which can be in the form of text, voice, or both). They provide conversational output in response, and if commanded, can sometimes also execute tasks. Although chatbot technologies have existed since the 1960's and have influenced user interface development in games since the early 1980's, chatbots are now easier to train and implement. This is due to plentiful open source code, widely available development platforms, and implementation options via Software as a Service (SaaS). In addition to enhancing customer experiences and supporting learning, chatbots can also be used to engineer social harm-that is, to spread rumors and misinformation, or attack people for posting their thoughts and opinions online. This paper presents a literature review of quality issues and attributes as they relate to the contemporary issue of chatbot development and implementation. Finally, quality assessment approaches are reviewed, and a quality assessment method based on these attributes and the Analytic Hierarchy Process (AHP) is proposed and examined.},
 	author = {Nicole Radziwill and Morgan Benton},
@@ -41,7 +34,6 @@
 	title = {Evaluating Quality of Chatbots and Intelligent Conversational Agents},
 	url = {http://www.masswerk.at/elizabot/eliza.html},
 }
-
 @inproceedings{Maroengsit2019,
 	abstract = {Nowadays chatbots have been widely adopted in many industries to automatically answer users' questions and requests via chat interfaces. While it has become much easier to develop a chatbot system, the system itself is a complex system in nature. It is a challenge to evaluate and compare various chatbot systems in terms of effectiveness, efficiency, goal achievability, and the ability to satisfy users. This paper presents a survey, starting from literature review, chatbot architecture, evaluation methods/criteria, and comparison of evaluation methods. Focused on the three subprocesses in the chatbot architecture: text processing, semantic understanding, and response generation. Moreover, the survey is conducted with classification of chatbot evaluation methods and their analysis according to chatbot types and three main evaluation schemes; content evaluation, user satisfaction, and chat function.},
 	author = {Wari Maroengsit and Thanarath Piyakulpinyo and Korawat Phonyiam and Suporn Pongnumkul and Pimwadee Chaovalit and Thanaruk Theeramunkong},
@@ -56,9 +48,8 @@
 	volume = {Part F148391},
 	year = {2019},
 }
-
 @inproceedings{Nuruzzaman2018,
-	abstract = {Nowadays it is the era of intelligent machine. With the advancement of artificial intelligent, machine learning and deep learning, machines have started to impersonate as human. Conversational software agents activated by natural language processing is known as chatbot, are an excellent example of such machine. This paper presents a survey on existing chatbots and techniques applied into it. It discusses the similarities, differences and limitations of the existing chatbots. We compared 11 most popular chatbot application systems along with functionalities and technical specifications. Research showed that nearly 75% of customers have experienced poor customer service and generation of meaningful, long and informative responses remains a challenging task. In the past, methods for developing chatbots have relied on hand-written rules and templates. With the rise of deep learning these models were quickly replaced by end-to-end neural networks. More specifically, Deep Neural Networks is a powerful generative-based model to solve the conversational response generation problems. This paper conducted an in-depth survey of recent literature, examining over 70 publications related to chatbots published in the last 5 years. Based on literature review, this study made a comparison from selected papers according to method adopted. This paper also presented why current chatbot models fails to take into account when generating responses and how this affects the quality conversation.},
+	abstract = {Nowadays it is the era of intelligent machine. With the advancement of artificial intelligent, machine learning and deep learning, machines have started to impersonate as human. Conversational software agents activated by natural language processing is known as chatbot, are an excellent example of such machine. This paper presents a survey on existing chatbots and techniques applied into it. It discusses the similarities, differences and limitations of the existing chatbots. We compared 11 most popular chatbot application systems along with functionalities and technical specifications. Research showed that nearly 75\% of customers have experienced poor customer service and generation of meaningful, long and informative responses remains a challenging task. In the past, methods for developing chatbots have relied on hand-written rules and templates. With the rise of deep learning these models were quickly replaced by end-to-end neural networks. More specifically, Deep Neural Networks is a powerful generative-based model to solve the conversational response generation problems. This paper conducted an in-depth survey of recent literature, examining over 70 publications related to chatbots published in the last 5 years. Based on literature review, this study made a comparison from selected papers according to method adopted. This paper also presented why current chatbot models fails to take into account when generating responses and how this affects the quality conversation.},
 	author = {Mohammad Nuruzzaman and Omar Khadeer Hussain},
 	doi = {10.1109/ICEBE.2018.00019},
 	isbn = {9781538679920},
@@ -70,15 +61,12 @@
 	title = {A Survey on Chatbot Implementation in Customer Service Industry through Deep Neural Networks},
 	year = {2018},
 }
-
 @report{Verkeyn2018,
-   author = {Hermès Meerschman and Juan Verkeyn},
-   title = {TOWARDS A BETTER UNDERSTANDING OF SERVICE QUALITY ATTRIBUTES OF A CHATBOT Hermès Meerschman},
-   url = {http://lib.ugent.be/catalog/rug01:002784375},
-   year = {2019},
+	author = {Juan Verkeyn and Hermès Meerschmans},
+	title = {TOWARDS A BETTER UNDERSTANDING OF SERVICE QUALITY ATTRIBUTES OF A CHATBOT },
+	url = {https://libstore.ugent.be/fulltxt/RUG01/002/784/375/RUG01-002784375_2019_0001_AC.pdf},
+	year = {2018},
 }
-
-
 @article{Muizzah2021,
 	abstract = {A chatbot is an application that is widely used in diverse industries nowadays. The application makes used of human natural language to interact with the user in order to carry out any designated task. It started with an experiment conducted by Alan Turing which was named as Turing Test in the 1950s that has contributed to the evolution of technology into personal intelligence assistance. Siri, Cortana, and other services are the product of the evolution that was created with the aim to induce user satisfaction while completing the desired task. Various features of Chatbot have been introduced to support the functionality and purpose of the application. Availability, functionality, ethics, personality, and appearance of the interfaces are among of the features favored by the end-user. Thus, this paper aims to records all features available and making a summary based on past researches conducted. The outcome will be reflected as a guideline to develop a new improved Chatbot.},
 	author = {Nurul Muizzah Johari and Puteri NE Nohuddin},
@@ -92,15 +80,106 @@
 	volume = {12},
 	year = {2021},
 }
-
 @report{ISO9126,
 	abstract = {ISO/IEC 9126 is currently one of the most widespread quality standards. In its actual form it embraces both quality models and metrics. Due to its generic nature, some of the concepts presented therein need to be refined before using the standard in a real project. In our paper, we aim at exploring which are the concepts that require being more elaborated before putting the standard to work. Specifically, with respect to the part 1 of the standard we focus on the hierarchical form of the quality entities (i.e., characteristics, subcharacteristics and attributes) that appear in quality models; we propose some criteria to distinguish among subcharacteristics and attributes; we distinguish among derived attributes and basic attributes; and we propose an extension for covering not only technical factors but also managerial and political ones. Concerning the other 3 parts of the standard (one of them currently pending of approval), we distinguish different categorization criteria of metrics (scale, type, objectivity, qualitative/quantitative) and we make explicit the rationale behind their definition with the Goal-Question-Metric approach. As a final contribution, we show the use of UML class diagrams for representing all the concepts of the standard and their relationships, and we highlight the need for having tool support for quality model development and metrics definition.},
 	author = {P Botella and X Burgués and J P Carvallo and X Franch and G Grau and J Marco and C Quer},
 	title = {ISO/IEC 9126 in practice: what do we need to know?},
 }
-
-
-
-
-
-
+@article{brandtzaeg2020,
+	abstract = {For chatbots to be broadly adopted by users, it is critical that they are experienced as useful and pleasurable. While there is an emerging body of research concerning user uptake and use of chatbots, there is a lack of theoretically grounded studies detailing what constitutes good or poor chatbot user experiences. In this paper, we present findings from a questionnaire study involving more than 200 chatbot users who reported on episodes of chatbot use that they found particularly satisfactory or frustrating. The user reports were analysed with basis in theory on user experience, with particular concern for pragmatic and hedonic attributes. We found that pragmatic attributes such as efficient assistance (positive) and problems with interpretation (negative) were important elements in user reports of satisfactory and frustrating episodes. Hedonic attributes such as entertainment value (positive) and strange and rude responses (negative) were also frequently mentioned. Older participants tended to report on pragmatic attributes more often, whereas younger participants tended to report on hedonic attributes more often. Drawing on the findings, we propose four high-level lessons learnt that may benefit chatbot service providers, and we suggest relevant future research.},
+	author = {Asbjørn Følstad and Petter Bae Brandtzaeg},
+	doi = {10.1007/s41233-020-00033-2},
+	issn = {2366-0139},
+	issue = {1},
+	journal = {Quality and User Experience},
+	month = {12},
+	publisher = {Springer Science and Business Media LLC},
+	title = {Users' experiences with chatbots: findings from a questionnaire study},
+	volume = {5},
+	year = {2020},
+}
+@article{Cohen2016,
+	author = {David Cohen and Ian Lane},
+	issue = {1},
+	journal = {Proceedings of the AAAI Conference on Artificial Intelligence},
+	month = {2},
+	title = {An Oral Exam for Measuring a Dialog System’s Capabilities},
+	volume = {30},
+	url = {https://ojs.aaai.org/index.php/AAAI/article/view/10060},
+	year = {2016},
+}
+@inproceedings{Eeuwen2017,
+	author = {M van Eeuwen},
+	title = {Mobile conversational commerce: messenger chatbots as the next interface between businesses and consumers},
+	year = {2017},
+}
+@article{Kuligowska2015,
+	author = {Karolina Kuligowska},
+	doi = {10.18483/PCBR.22},
+	journal = {Professionals Center for Business Research},
+	month = {12},
+	pages = {1-16},
+	title = {Commercial Chatbot: Performance Evaluation, Usability Metrics and Quality Standards of Embodied Conversational Agents},
+	volume = {2},
+	year = {2015},
+}
+@report{Candela2018,
+	abstract = {This research focuses on investigating Italians consumers' perception and attitude towards chatbots adoption. The Uses and Gratification Theory (UGT), Technology Acceptance Model (TAM) and Diffusion of Innovation theory (DOI) have been combined to build a conceptual framework. Hypothesis have been tested thought a quantitative research such as a questionnaire. The questionnaire was distributed via online channels such as Facebook Groups, Instagram and WhatsApp. The author adopted a statistical analysis to investigate the relationship between consumers' perception and attitude towards chatbots. From the findings the author identified a significant correlation between positive attitude and perception and chatbot adoption. Furthermore, the author discovered that productivity was the main motivation for chatbot adoption. At the end of this paper the author provided some suggestions for companies based on the information collected from this research.},
+	author = {Edmondo Candela},
+	institution = {Aalborg University},
+	title = {Consumers' perception and attitude towards chatbots' adoption. A focus on the Italian market},
+	url = {https://projekter.aau.dk/projekter/files/281244069/IM_thesis_EdmondoCandela.pdf},
+	year = {2018},
+}
+@article{Wang2019,
+	abstract = {Vendors of mobile communication applications/services (apps) aim at improve their designs to attract and retain users, and thus achieve the critical mass needed to ensure the success of their services. Despite the significant number of prior mobile service studies, few works have examined the effects of inertia and satisfaction on the users’ continuance intention with regard to specific mobile communication apps from a mobile-service-quality perspective. By integrating the mobile service quality framework, inertia, and user satisfaction, this study develops a model for interpreting the development of the continuance intention of users of mobile communication apps. Data collected from 238 users of such apps provided support for the model. The results indicated that interaction quality, environment quality, inertia, and user satisfaction are key determinants of continuance intention, while outcome quality is not. The theoretical and practical implications of this work are discussed.},
+	author = {Wei-Tsong Wang and Wei-Ming Ou and Wen-Yin Chen},
+	doi = {https://doi.org/10.1016/j.ijinfomgt.2018.10.011},
+	issn = {0268-4012},
+	journal = {International Journal of Information Management},
+	keywords = {Continuance intention,Inertia,Mobile communication applications,Mobile service quality,User satisfaction},
+	pages = {178-193},
+	title = {The impact of inertia and user satisfaction on the continuance intentions to use mobile communication applications: A mobile service quality perspective},
+	volume = {44},
+	url = {https://www.sciencedirect.com/science/article/pii/S0268401218304651},
+	year = {2019},
+}
+@thesis{Duijst2017,
+	author = {Daniëlle Duijst},
+	doi = {10.13140/RG.2.2.36112.92165},
+	month = {7},
+	title = {Can we Improve the User Experience of Chatbots with Personalisation?},
+	year = {2017},
+}
+@inproceedings{Morrissey2013,
+	abstract = {The aim of this research is to generate measurable evaluation criteria acceptable to chatbot users. Results of two studies are summarised. In the first, fourteen participants were asked to do a critical incident analysis of their transcriptions with an ELIZA-type chatbot. Results were content analysed, and yielded seven overall themes. In the second, these themes were made into statements of an attitude-like nature, and 20 participants chatted with five winning entrants in the 2011 Chatterbox Challenge and five which failed to place. Latent variable analysis reduced the themes to four, resulting in four subscales with strong reliability which discriminated well between the two categories of chatbots. Content analysis of freeform comments led to a proposal of four dimensions along which people judge the naturalness of a conversation with chatbots.},
+	author = {Kellie Morrissey and Jurek Kirakowski},
+	city = {Berlin, Heidelberg},
+	editor = {Masaaki Kurosu},
+	isbn = {978-3-642-39330-3},
+	journal = {Human-Computer Interaction. Interaction Modalities and Techniques},
+	pages = {87-96},
+	publisher = {Springer Berlin Heidelberg},
+	title = {`Realness' in Chatbots: Establishing Quantifiable Criteria},
+	year = {2013},
+}
+@article{Ashfaq2020,
+	abstract = {Chatbots are mainly text-based conversational agents that simulate conversations with users. This study aims to investigate drivers of users’ satisfaction and continuance intention toward chatbot-based customer service. We propose an analytical framework combining the expectation-confirmation model (ECM), information system success (ISS) model, TAM, and the need for interaction with a service employee (NFI-SE). Analysis of data collected from 370 actual chatbot users reveals that information quality (IQ) and service quality (SQ) positively influence consumers’ satisfaction, and that perceived enjoyment (PE), perceived usefulness (PU), and perceived ease of use (PEOU) are significant predictors of continuance intention (CI). The need for interaction with an employee moderates the effects of PEOU and PU on satisfaction. The findings also revealed that satisfaction with chatbot e-service is a strong determinant and predictor of users’ CI toward chatbots. Thus, chatbots should enhance their information and service quality to increase users’ satisfaction. The findings imply that digital technologies services, such as chatbots, could be combined with human service employees to satisfy digital users.},
+	author = {Muhammad Ashfaq and Jiang Yun and Shubin Yu and Sandra Maria Correia Loureiro},
+	doi = {10.1016/j.tele.2020.101473},
+	issn = {07365853},
+	journal = {Telematics and Informatics},
+	keywords = {Chatbots,Continuance intention,ECM,ISS model,Satisfaction,TAM,The need for interaction},
+	month = {11},
+	publisher = {Elsevier Ltd},
+	title = {I, Chatbot: Modeling the determinants of users’ satisfaction and continuance intention of AI-powered service agents},
+	volume = {54},
+	year = {2020},
+}
+@report{Goot2020,
+	abstract = {The current qualitative interview study describes the communication journey of customers who wish to contact companies, and their evaluation of chatbot communication within this journey. Interviews were conducted with a sample (N=24) that was varied in terms of gender, age, educational level and household composition. Experiences with nine customer service chatbots were included. The analysis focuses on three stages in the journey: first, customers' prior expectations when contacting a company; second, their experiences during chatbot conversations, and third, their final conclusions about under which conditions customer service chatbots should be implemented, and the consequences of chatbot communication for customers' company perceptions. Implications for research and practice are discussed. 1 Introduction Developments in AI fundamentally alter how companies communicate with their customers [9]. Particularly in customer service, chatbots are increasingly implemented [7, 11, 12]. Customers who need information or who want to complain can type their questions in a dialogue screen (often looking like a chat interface), and receive answers in natural language. The essential characteristic of this type of communication is that, although the answers are automatically generated, the conversation is made to resemble a dialogue between humans [7]. Since this is a novel way of interacting with a company, the question arises how customers experience these conversations, and how this communication affects their company perceptions. The current qualitative interview study aims to shed light on these issues by describing the communication journey of customers who wish to contact companies, and their evaluation of chatbot communication within this journey. The analysis focuses on three stages in the journey: first, customers' prior expectations when contacting a company; second, their experiences during chat-bot conversations, and third, their final conclusions about under which conditions customer service chatbots should be implemented, and the consequences of chatbot communication for customers'company perceptions.},
+	author = {Margot J Van Der Goot and Laura Hafkamp and Zoë Dankfort},
+	keywords = {AI,Chatbots,Company perceptions,Customer service,Qualitative interview study,User experience},
+	title = {Customer Service Chatbots: A Qualitative Interview Study into Customers' Communication Journey},
+	year = {2020},
+}
