--- a/Thesis/LaTeX/Methodology.tex
+++ b/Thesis/LaTeX/Methodology.tex
@@ -2,3 +2,60 @@
 \pagestyle{headings}
 
 \chapter{Methodology}
+\section{Research Questions \& Hypotheses}
+To determine the influence of chatbots on the telecom industry, various questions must be asked of the industry's participants. These inquiries are predicated on a hypothesis from which we begin our investigation.\\
+\break
+Even if reality suggests otherwise, the hypotheses are developed with a favourable expectation in mind.\\
+\break
+\textbf{Main Question: Do current customer service chatbots what they are supposed to do?}\\
+\break 
+Five research questions were formulated to answer this main research question:
+
+\subsubsection{RQ1: Are current customer service chatbots effective in helping people and solving their problems?}
+It is illogical to think that there will be people who will keep a good impression of a customer service chatbot after it was unable to help with or solve their existing problem. Multiple studies suggest that it is essential that the execution done by a chatbot is effective [WIP: complete studies].\\
+In a task- oriented chatbot, under which a customer service chatbot can be placed, usefulness is key (\cite{brandtzaeg2020}). Solving problems and providing help in an effective and efficient manner is the key to providing a good user experience. It is also crucial that the user's intentions are correctly interpreted and answered adequately.\\
+\break
+\cite{Verkeyn2018} categorized 28 quality attributes and divided them up in 5 dimensions. Based on these quality attributes, the evaluation of a chatbot is possible (see literature study). Relevant quality attributes that can be linked to the research question serve as the foundation for the hypotheses. In this way, the research question can be reliably tested against reality.\\
+\break
+\break
+Related hypotheses:
+\begin{enumerate}
+	\item H1: Current customer service chatbots execute requested tasks correctly. Based on \cite{Verkeyn2018} quality attribute “Execute requested tasks” from the dimension “Functionality”
+	\item H2: Current customer service chatbots can deliver the same services as a human agent. Based on \cite{Verkeyn2018} quality attribute “Number of services available in the chatbot” from the dimension “Functionality” (reference: (\cite{Eeuwen2017}))
+	\item H3: Current customer service chatbots contain enough knowledge to provide good assistance. Based on \cite{Verkeyn2018} quality attribute “Contains breadth of knowledge” from the dimension “Trustworthiness” (reference: (\cite{Cohen2016}; \cite{Kuligowska2015}))
+\end{enumerate}
+
+\subsubsection{RQ 2: Are current customer service chatbots easy to use and accessible?}
+When a customer service chatbot is effective in helping people, but is so complex or unusable that nobody uses it again, it is rational to assume that this chatbot has not made a good impression. In addition, a chatbot should be easily accessible, so that a high level of service is always present.\\
+Here, too, the quality attributes of \cite{Verkeyn2018} serve as the basis for evaluation. Relevant quality attributes that can be linked to the research question serve as the foundation for the hypotheses. In this way, the research question can be reliably tested against reality.\\
+\break
+\break
+Related hypotheses:
+\begin{enumerate}
+	\item H4: Current customer service chatbots are easy to use. Based on \cite{Verkeyn2018} quality attribute “Ease of use” from the dimension “Efficiency” (reference:(\cite{Candela2018}; \cite{Duijst2017}))
+	\item H5: Current customer service chatbots are available at all times (24/7). Based on \cite{Verkeyn2018} quality attribute “Available at all times” from the dimension “Efficiency” (reference: (\cite{Wang2019}))
+\end{enumerate}
+
+\subsubsection{RQ3: Do current customer service chatbots create a pleasant customer experience?}
+When a customer uses a service or buys a product from a company, it is important that the customer has a good feeling about how this interaction went. When using a chatbot, a company wants to invoke a good feeling in the user as well. \\
+\break
+A “pleasant” customer experience can be seen as an experience where the customer is helped in a friendly and smooth way.\\
+\break
+\break
+Related hypotheses:
+\begin{enumerate}
+	\item H6: Current customer service chatbots have a nice user-interface. Based on \cite{Verkeyn2018} quality attribute “User-interface” from the dimension “Graphical appearance” (reference: (\cite{Duijst2017}; \cite{Kuligowska2015}),
+	\item H7: Current customer service chatbots create an enjoyable interaction Based on \cite{Verkeyn2018} quality attribute “Create an enjoyable interaction” from the dimension “Humanity” (reference: (\cite{Morrissey2013}))
+\end{enumerate}
+
+\subsubsection{RQ4: Do the business users still prefer to use human over a customer service chatbot?}
+Humans have dealt with human interaction for thousands of years. Recently, a new means in the form of a chatbot has come into our lives. It isn’t strange to assume, considering humans are seen as social animals and our history, that a client would still prefer human interaction above interactions with a chatbot. Yet, the literature has a two-sided stance on this matter. Some articles make this statement to be correct (\cite{Ashfaq2020}) whilst others dispute its facts (\cite{Muizzah2021}; \cite{Radziwil2021}). Since there is uncertainty, this research might help clear things up.\\
+\break
+H8: Business users still prefer human interaction above a customer service chatbot.\\
+\break
+Research hints at many possible problems when interacting with machines which can lead to frustrations. This makes users less likely to want to converse with chatbots. (\cite{Ashfaq2020}; \cite{brandtzaeg2020}; \cite{Goot2020}) That is why the hypothesis start from the perspective that human-human interaction is still preferred.
+
+\section{Methodology}
+The exact methodology is shown below.\\
+\break
+The research questions and hypotheses will be investigated by means of a joint survey.\\
